--- a/eyewrite.html
+++ b/eyewrite.html
@@ -97,7 +97,7 @@
   <div id="userlist" width="100px" style="position: absolute; top:0px; left:0px; background-color: white;"></div>
 
   <div id="firepad" style='visibility:hidden'></div>
-  <button id="downloadButton" style="position: absolute; top: 400px; left: 0px; background-color: lightgreen;padding: 10px; font-size: 14px;" onclick="unloadingCSV()">Download Data</button>
+  <button id="downloadButton" style="position: absolute; bottom: 40px; left: 10px; background-color: lightgreen;padding: 10px; font-size: 14px;" onclick="unloadingCSV()">Download Data</button>
 
   <div id='imageContainer' style='position:relative;background-color: white;;height:1300px;left:160px; width: 2250px;display: flex; align-items: center;border-radius: 25px;'>
     <img id='imageSearch' src='' alt="IMAGE" width='2200px' height='1250px' style="border: 2px solid #000000"/>
